kubernetes/tenants/drova/console/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda-console
  namespace: drova
  labels:
    app: redpanda-console
spec:
  selector:
    app: redpanda-console
  ports:
    - name: http
      port: 8080
      targetPort: http
